# tswn-core

./: .gitignore  6k_report.md  CHANGELOG.md  Cargo.toml  README.md  build_py.py  gen_test_case.py  plan.md  rule.md  rustfmt.toml  sby_test.md  track.py  track_case_miner.py  track_diy_roundtrip.py  track_test.py  update.md
.cargo/: config.toml
.claude/: settings.local.json
crates/tswn_capi/: CHANGELOG.md  Cargo.toml  README.md
crates/tswn_core/: CHANGELOG.md  Cargo.toml  README.md
crates/tswn_core/examples/: md5_fight_probe.js  md5_score_probe.js  score_probe.rs  shadow_probe.rs
crates/tswn_core/src/: bench_sched.rs  case_gen.rs  debug.rs  error.rs  lib.rs  rc4.rs  replay_view.rs  win_rate.rs
crates/tswn_core/src/cli_api/: bench.rs  mod.rs  parse.rs
crates/tswn_core/src/engine/: engine_core.rs  hooks.rs  lang.rs  mod.rs  runners.rs  storage.rs  tick.rs  update.rs  world_state.rs
crates/tswn_core/src/engine/test/: mod.rs
crates/tswn_core/src/engine/test/runner/: fight_large.rs  fight_multi_1.rs  fight_multi_2.rs  fight_multi_3.rs  fight_multi_4.rs  fight_multi_5.rs  fight_multi_6.rs  fight_multi_7.rs  fight_multi_8.rs  large_01_10.rs  large_11_17.rs  large_18_22.rs  large_23_30.rs  large_31_40.rs  large_41_45.rs  large_46_50.rs  large_51_55.rs  large_56_61.rs  large_62_65.rs  large_66_70.rs  large_71_80.rs  mod.rs  simple.rs  small.rs
crates/tswn_core/src/player/: action_targets.rs  eval_name.rs  icon_render.rs  impl_attr.rs  impl_ctor.rs  impl_runtime.rs  mod.rs  overlay.rs  skill.rs  state.rs  status.rs  test.rs  test_shadow_sync.rs  utils.rs  weapons.rs
crates/tswn_core/src/player/boss/: covid.rs  lazy.rs  mod.rs  saitama.rs  testsubject.rs
crates/tswn_core/src/player/icon_render/: sprite_data.rs  test.rs
crates/tswn_core/src/player/skill/: store.rs
crates/tswn_core/src/player/skill/act/: absorb.rs  accumulate.rs  assassinate.rs  berserk.rs  charge.rs  charm.rs  clone.rs  critical.rs  curse.rs  disperse.rs  exchange.rs  fire.rs  half.rs  haste.rs  heal.rs  ice.rs  iron.rs  minion.rs  mod.rs  poison.rs  possess.rs  quake.rs  rapid.rs  revive.rs  shadow.rs  slow.rs  summon.rs  thunder.rs
crates/tswn_core/src/player/skill/skl/: corpse.rs  counter.rs  defend.rs  hide.rs  merge.rs  mod.rs  none.rs  protect.rs  reflect.rs  reraise.rs  shield.rs  upgrade.rs  zombie.rs
crates/tswn_core/src/player/test/: basic.rs  boss.rs  minions.rs  shadow_sync.rs  skill_store.rs  skills.rs  states.rs  weapons.rs
crates/tswn_ds3/: CHANGELOG.md  Cargo.toml  README.md
crates/tswn_ladder/: CHANGELOG.md  Cargo.toml
crates/tswn_ladder/src/: main.rs
crates/tswn_lane_ranker/: CHANGELOG.md  Cargo.toml
crates/tswn_lane_ranker/src/: db.rs  main.rs  model.rs  pairwise.rs  parser.rs  ranker.rs  service.rs  skill_eq.rs  team.rs  web.rs  winrate.rs
crates/tswn_lane_ranker/static/: app.js  index.html  style.css
crates/tswn_openbox/: CHANGELOG.md  Cargo.toml  README.md
crates/tswn_openbox/assets/: score_now.toml
crates/tswn_openbox/assets/targets/: target1.txt  target2.txt  target3.txt
crates/tswn_openbox/assets/teammates/: teammate_bc.txt  teammate_fs.txt  teammate_fz.txt  teammate_pj.txt  teammate_wc.txt
crates/tswn_openbox/src/: app.rs  backend.rs  main.rs
crates/tswn_openbox/src/app/: actions.rs  source.rs  state.rs  target_presets.rs  view.rs  widgets.rs
crates/tswn_openbox/src/backend/: format.rs  parse.rs  score.rs  skill_board.rs  tasks.rs  types.rs
crates/tswn_py/: CHANGELOG.md  Cargo.toml  README.md  README_BUILD.md  build_dist.py  pyproject.toml
crates/tswn_py/examples/: runner_eval_rq.py  runner_prepared.py  win_rate.py
crates/tswn_py/src/: cli_api.rs  lib.rs  wrapper.rs
crates/tswn_py/src/wrapper/: error.rs  mod.rs  player.rs  rc4.rs  replay.rs
crates/tswn_py/tswn_py/: __init__.py  __init__.pyi  _types_engine.pyi  _types_player.pyi  _types_rc4.pyi  _types_replay.pyi  _types_runner.pyi  _types_update.pyi  _version.py  tswn_py.pyi
crates/tswn_wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/tswn_wasm/examples/: README.md  demo.html  show-render.js  show-replay.js  show-utils.js  show-wasm.js  show.css  show.html  show.js
crates/tswn_wasm/src/: error.rs  fight.rs  lib.rs  model.rs  render.rs  win_rate.rs
docs/: 00_summary.md  DIY.md  README.md  architecture.md  build_all.md  performance.md  plan_j_remaining_work.md  plr.md  proc_registration_locations.md  rust_design.md  storage_refactor_analysis.md  tswn_wasm_design.md  verify_checklist.md  why_ns_investigation_2026-05-17.md  why_ns_tswn_ds4f.md  方案J_实施进度.md
docs/analysis/: clone_mechanism.md  name_factor_rq.md  skill_decay.md  storage_refactor.md  why_ns_ds4f.md  why_ns_original.md  why_ns_short.md  why_ns_tswn_core.md
docs/diff/: _single_case.json  _single_case.md  bun_tswn_round_mismatches.json  bun_tswn_round_mismatches.md
docs/howto/: 1-start.md  README.md  capi_cpp_windows.md  diy_validation.md  openharmony.md
docs/mermaid/: 01_standard_attack_sequence.md  02_direct_defend_sequence.md  03_direct_hp_modify_sequence.md  04_direct_onDie_sequence.md  05_summon_damage_share_sequence.md
docs/perf/: benchmark_tracking.md  fixed_cases_20_benchmark.md  fixed_cases_30_benchmark.md  opt_target_selection.md  ub_fix_no_debug.md
docs/update/: 0.2.0.md  0.2.1.md  0.2.10.md  0.2.11.md  0.2.12.md  0.2.13.md  0.2.14.md  0.2.15.md  0.2.16.md  0.2.17.md  0.2.18.md  0.2.19.md  0.2.2.md  0.2.20.md  0.2.21.md  0.2.22.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  (+15 more)
examples/: extract_sprites.rs
scripts/: README.md  build_all.py  build_capi.py  build_py.py  build_wasm.py  bun_profile_trace.js  bun_score_trace.js  find_bun_tswn_namer_pf_mismatches.py  find_bun_tswn_reply_mismatches.py  find_bun_tswn_round_mismatches.py  gen_test_case.py  ohos-env.ps1  ohos-env.sh  verify_py_cli_api.py
setting/: settings.toml
src/: engine.rs  error.rs  lib.rs  main.rs  player.rs  rc4.rs
test/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  14.md  16.md  18.md  23.md  24.md  25.md  26.md  28.md  29.md  30.md  32.md  33.md  34.md  35.md  36.md  37.md  README.md  large.md
(+214 files in other folders)
