[workspace]
resolver = "2"
members = [
  "crates/tswn_capi",
  "crates/tswn_core",
  "crates/tswn_ds3",
  "crates/tswn_py",
  "crates/tswn_wasm",
  "crates/tswn_openbox",
  "crates/tswn_lane_ranker",
  "crates/tswn_ladder",
]

[profile.release]
lto = "fat"
debug = 1
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
