[package]
name = "tswn_wasm"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.97"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tswn_core = { version = "0.2.20", path = "../tswn_core", features = ["no_debug"] }
wasm-bindgen = "0.2.120"
